[tool.poetry]
name = "pimoroni-pico-stubs"
version = "1.21.0"
description = "Micropython Stubs for Pimoroni MicroPython libraries for RP2040-based boards"
license = "MIT"
authors = []
readme = "README.md"
homepage = "https://github.com/pimoroni/pimoroni-pico-stubs"
repository = "https://github.com/pimoroni/pimoroni-pico-stubs"

packages = [
    { "include" = "**/*.pyi", from = "pimoroni_pico-stubs"},
]

[tool.poetry.dependencies]
python = "^3.10"
micropython-rp2-rpi_pico_w-stubs = ">=1.21.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
